convert big chaos values to divine
